MINOR: change map.of to Collections.singletonMap (#17878)
Signed-off-by: PoAn Yang <payang@apache.org>

Reviewers: Manikumar Reddy <manikumar.reddy@gmail.com>